module-1/sockshoptoo/policies/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: sock-shop-too
spec:
  podSelector: {}
  ingress: []
