module-1/sockshoptoo/policies/ui.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ui
  namespace: sock-shop-too
spec:
  podSelector:
    matchLabels:
      layer: ui
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from: []
  egress:
  - to:
    - podSelector:
        matchLabels:
          layer: service
  - ports:
    - protocol: TCP
      port: 80
